# CoPaw

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_zh.md  ENHANCEMENTS.md  PRIVACY_PROTECTION.md  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh.md  _patch_channel.py  _pr1001_diff.txt  build.sh  diff.txt  docker-compose.yml  error_lines.txt  extract_clean.py  fix.sh  git_log.txt  out.txt  pre_commit_out.txt  pre_commit_output.txt  pylint2.txt  pylint_out.txt  pyproject.toml  pytest_out.txt  shell_pylint.txt
console/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
desktop/: .gitignore  entitlements.plist  forge.config.ts  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
docs/: multi-agent-contribution.md  token-usage-implementation.md
downloads/: file_3ea2a6da0b0101ee08e19bf29709a2b3
e2e/: conftest.py  pytest.ini  requirements.txt
ko/: AGENTS.md  BOOTSTRAP.md
scripts/: README.md  build_sidecar.sh  build_sidecar_universal.sh  clean_desktop.sh  desktop_build.py  desktop_build.sh  diagnose_wecom.py  install.bat  install.ps1
src-tauri/: Cargo.toml  README.md  loading.html  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: app.entitlements
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  permissions.rs  sidecar.rs
src/copaw/app/channels/wecom/aibot-python-sdk/: README.md  pyproject.toml  requirements.txt
src/copaw/app/channels/wecom/aibot-python-sdk/examples/: basic.py  comparison_test.py
src/copaw/app/channels/wecom/aibot-python-sdk/examples/downloads/: 感谢阅读.md
tests/: test_channel_media_flow.py  test_channel_media_utils.py  test_command_dispatch.py  test_config_validator.py  test_console_push_store.py  test_conversation_relay.py  test_dingtalk_dedup.py  test_dingtalk_handler.py  test_feishu_file_send_guard.py  test_image_understanding.py  test_llm_routing.py  test_llm_routing_cli.py  test_local_models_manager.py  test_mcp_reconnect.py  test_mcp_resilience.py  test_ollama_no_apikey.py  (+18 more)
(+877 files in other folders)
